--- a/WebApplication/Views/Home/Index.cshtml
+++ b/WebApplication/Views/Home/Index.cshtml
@@ -22,8 +22,10 @@
             </div>
         </div>
     </nav>
-
-    <div ng-view></div>
+    <div class="container">
+        <div ng-view></div>
+    </div>
+    
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular-route.min.js"></script>
