--- a/WebApplication/Views/Home/Index.cshtml
+++ b/WebApplication/Views/Home/Index.cshtml
@@ -5,31 +5,34 @@
     @Styles.Render("~/Content/css")
 </head>
 <body>
+    <div class="container">
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand">{{Title.Description}}</a>
+                </div>
 
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">{{Title.Description}}</a>
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li ng-repeat="item in MenuOptions">
+                            <a href="{{item.Url}}">{{item.Description}}</a>
+                        </li>
+                    </ul>
+
+                </div>
             </div>
+        </nav>
 
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav" >                    
-                    <li ng-repeat="item in MenuOptions">
-                        <a href="{{item.Url}}">{{item.Description}}</a>
-                    </li>
-                </ul>
-
+        <div class="jumbotron">
+            <div ng-view>
             </div>
         </div>
-    </nav>
-    <div class="container">
-        <div ng-view></div>
     </div>
-    
+
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular-route.min.js"></script>
-    
+
 
     @Scripts.Render("~/bundles/WebApp")
 </body>
