--- a/WebApplication/Views/Home/Index.cshtml
+++ b/WebApplication/Views/Home/Index.cshtml
@@ -27,7 +27,12 @@
             <div ng-view>
             </div>
         </div>
+
+        <footer>
+            <p>&copy; @DateTime.Now - Andrés Mauricio Zapata Caro</p>
+        </footer>
     </div>
+
 
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.min.js"></script>
